# PELLETINO

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
components/audio_hal/: CMakeLists.txt
components/audio_hal/include/: audio_hal.h  namco_wsg.h
components/audio_hal/src/: audio_hal.cpp  namco_wsg.cpp
components/display/: CMakeLists.txt
components/display/include/: display.h
components/display/src/: display.cpp
components/pacman_hw/: CMakeLists.txt
components/pacman_hw/include/: pacman_hw.h  pacman_input.h  pacman_video.h
components/pacman_hw/src/: pacman_hw.cpp  pacman_input.cpp  pacman_video.cpp
components/z80_cpu/: CMakeLists.txt
components/z80_cpu/include/: z80_cpu.h
components/z80_cpu/src/: .gitignore  z80_cpu.c
docs/: HARDWARE.md  ROM_SETUP.md
main/: CMakeLists.txt
main/include/: game_state.h
main/src/: fiesta_video.c  main.cpp
model/: 3 piece medal - back.stl  3 piece medal - buttons.stl  3 piece medal - font.stl  3 piece medal - front.stl  3 piece medal - middle.stl
movie/: optimization_results.txt
tools/: convert_roms.py
