idf_component_register(
    SRCS 
        "src/main.cpp"
        "src/game_state.c"
    INCLUDE_DIRS 
        "include"
        "roms"
        "${IDF_PATH}/components/esp_rom/include/esp32c6/rom"
    REQUIRES
        driver
        esp_timer
        esp_rom
        audio_hal
        display
        z80_cpu
        pacman_hw
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        esp_phy
        bt
)
